ibm/deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sampleapp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sampleapp
spec:
  hosts:
    - "*"
  gateways:
    - sampleapp-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: sampleapp
            subset: prod
            port:
              number: 8080
          weight: $PROD_WEIGHT
        - destination:
            host: sampleapp
            subset: canary
            port:
              number: 8080
          weight: $CANARY_WEIGHT
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sampleapp
spec:
  host: sampleapp
  subsets:
    - name: prod
      labels:
        version: prod
    - name: canary
      labels:
        version: canary
